# uv-experience

./: .gitignore  Makefile  README.md  compare_tools.py  pyproject.toml  requirements-pip-large.txt  requirements-pip-small.txt  requirements-uv-large.txt  requirements-uv-small.txt
